# link-shortener

./: .gitignore  docker-compose.yaml
backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml  pyrightconfig.json
backend/src/: auth.py  db.py  main.py  models.py
backend/src/api/: main.py
backend/src/database/: db.py  models.py  supabase.py
backend/src/domain/: link.py
backend/src/repositories/: link_mapper.py  link_repo.py
backend/src/schemas/: link_request.py  link_response.py  user.py
frontend/: .gitignore  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/app/: index.html
frontend/src/: App.tsx  vite-env.d.ts
frontend/src/auth/: useSession.tsx
frontend/src/components/: CreateLinkForm.tsx  LinkCard.tsx  Login.tsx  ViewLinks.tsx
