[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.29",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.50",
    "supabase<2.5",
    "uvicorn>=0.48.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.15",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]  # errors, pyflakes, imports, bugbear
ignore = ["E501"]              # example: ignore line length if needed
